# ConcordOS

./: README.md
Concord Exordium a1.1/System/: boot.asm  kernel  kernel.cpp
Concord Exordium a1.2/: meson.build  meson_options.txt
Concord Exordium a1.2/arch/x86_64/: kernel.ld
Concord Exordium a1.2/src/kernel/: main.cc
ConcordOS_v0.3/: CMakeLists.txt  main.c
Concord_v0.2/: README.md  main.py
Images/: logo2.xcf  logosmall2.xcf
docs/: CNAME  index.html  index.md
docs/css/: mainstyle.css
